@@ -1,3 +1,5 @@
+01-Dec-2015 Check first whether a VSProject option already contains a value, before raising an exception if it isn't possible to append.
+
 30-Nov-2015 ======== Version 1.0.0b4 Release ========
 
 30-Nov-2015 Fixes #58. Documented Core assembly, and some of the major packages.
